-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.0 Alpha
-
e3c21ca0e7681d75a27f825587b1700ead79a864 05f767f777d92f41cec1d8bb9a512b1f2e40ef5f
This is enough to crash it. Remove either contextType or renderTarget and it doesn't crash anymore.
import QtQuick 2.3 Canvas { id: canvas width: 100 height: 100 contextType: "2d" renderTarget: Canvas.FramebufferObject }
| For Gerrit Dashboard: QTBUG-41353 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 95029,3 | Don't assume a QSGRenderContext is valid just because it's not 0 | 5.4 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 95094,2 | Use new sceneGraphInitialized() method for canvas item | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |